[gd_scene load_steps=6 format=2]

[ext_resource path="res://Logic/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/main_theme.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/intro_atmosphere.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/gem_pickup.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/vortex_drone.ogg" type="AudioStream" id=5]

[node name="SoundManager" type="Node"]
script = ExtResource( 1 )

[node name="VortexDrone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="BackgroundDroneMaybe" type="AudioStreamPlayer" parent="."]

[node name="IntroAtmosphere" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TweenOut" type="Tween" parent="."]

[node name="TweenIn" type="Tween" parent="."]

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="TweenQuiet" type="Tween" parent="."]

[connection signal="tween_all_completed" from="TweenOut" to="." method="_on_TweenOut_tween_all_completed"]
[connection signal="tween_all_completed" from="TweenIn" to="." method="_on_TweenIn_tween_all_completed"]
